--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
     "framer-motion": "^4.0.3",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.32.1",
+    "react-table": "^7.7.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-table": "^7.7.8",
     "typescript": "4.3.2"
   }
 }
