--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
+    "react-data-grid": "^7.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.32.1",
@@ -25,6 +26,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-table": "^7.7.8",
+    "request": "^2.88.2",
     "typescript": "4.3.2"
   }
 }
