--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p ${PORT:=3000}"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
